[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.41"
bbn-data = { path = "./crates/bbn-data" }
bbn-hatena-blog = { path = "./crates/bbn-hatena-blog" }
bbn-repository = { path = "./crates/bbn-repository" }
chrono = "0.4.19"
date-range = { git = "https://github.com/bouzuya/rust-sandbox", rev = "f89152a80a4051b7b0164e2917e76a040cf80c0e" }
hatena-blog-api = { git = "https://github.com/bouzuya/rust-hatena-blog-api", tag = "0.2.0", features = ["rustls-tls"] }
markdown-link-helper = { git = "https://github.com/bouzuya/rust-sandbox", rev = "f89152a80a4051b7b0164e2917e76a040cf80c0e" }
nom = "6.1.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
thiserror = "1.0.30"
tokio = { version = "1.7.1", features = ["full"] }
