[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
bbn-data = { path = "./crates/bbn-data" }
bbn-hatena-blog = { path = "./crates/bbn-hatena-blog" }
bbn-repository = { path = "./crates/bbn-repository" }
chrono = "0.4.43"
date-range = { path = "./vendor/date-range" }
hatena-blog-api = { git = "https://github.com/bouzuya/rust-hatena-blog-api", tag = "0.2.0", features = ["rustls-tls"] }
markdown-link-helper = { path = "./vendor/markdown-link-helper" }
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
