[package]
name = "bbn"
version = "0.41.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
askama = "0.15"
bbn-data = { workspace = true }
bbn-hatena-blog = { workspace = true }
bbn-repository = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"
console = "0.16.2"
date-range = { workspace = true }
dialoguer = "0.12.0"
diff = "0.1.13"
hatena-blog-api = { workspace = true }
include_dir = { version = "0.7", features = ["glob"] }
markdown-link-helper = { workspace = true }
nom = { workspace = true }
open = "5.3.3"
pulldown-cmark = "0.13.0"
regex = "1.12.3"
serde = { workspace = true }
serde_json = { workspace = true }
sitemap-xml-writer = "0.1.0"
thiserror = { workspace = true }
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { workspace = true }
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
temp-env = "0.3.6"
tempfile = { workspace = true }
